--- a/banner/banner.wxml
+++ b/banner/banner.wxml
@@ -1,13 +1,22 @@
 <view class="banner" hidden='{{bannerHidden}}'>
-	<swiper indicator-dots="true"
-  			autoplay="true"
-  			circular="true"
-  			class="index_banner swiper-box">
-    	<swiper-item wx:for="{{bannerList}}"
-					 wx:key="{{index}}"
-					 wx:for-item="list" 
-					 data-id="{{list.id}}">
-        	<image src="{{list.img}}" class="home_banner_img" mode="widthFix"></image>
-    	</swiper-item> 
+	<swiper indicator-dots="{{bannerAttrList.indicatorDots ? bannerAttrList.indicatorDots: 'false'}}"
+	  autoplay="{{bannerAttrList.autoplay ? bannerAttrList.autoplay: 'true'}}"
+	  circular="{{bannerAttrList.circular ? bannerAttrList.circular: 'false'}}"
+    indicator-color="{{bannerAttrList.indicatorColor ? bannerAttrList.indicatorColor: 'rgba(0, 0, 0, .3)'}}"
+    indicator-active-color="{{bannerAttrList.indicatorActiveColor ? bannerAttrList.indicatorActiveColor : '#000000' }}"
+    current="{{bannerAttrList.current ? bannerAttrList.current : 0}}"
+    interval="{{bannerAttrList.interval ? bannerAttrList.interval : 4000}}"
+    duration="{{bannerAttrList.duration ? bannerAttrList.duration : 500}}"
+    previous-margin="{{bannerAttrList.previousMargin ? bannerAttrList.previousMargin : 0}}"
+    next-margin="{{bannerAttrList.nextMargin ? bannerAttrList.nextMargin : 0}}"
+    display-multiple-items="{{bannerAttrList.displayMultipleItems ? bannerAttrList.displayMultipleItems : 1}}"
+    skip-hidden-item-layout="{{bannerAttrList.skipHiddenItemLayout ? bannerAttrList.skipHiddenItemLayout : 'false'}}"
+	  class="index_banner swiper-box">
+  	<swiper-item wx:for="{{bannerList}}"
+				         wx:key="{{index}}"
+				         wx:for-item="list" 
+				         data-id="{{list.id}}">
+      	<image src="{{list.img}}" class="home_banner_img" mode="widthFix"></image>
+  	</swiper-item> 
 	</swiper>
 </view>
