--- a/banner/banner.wxss
+++ b/banner/banner.wxss
@@ -1,23 +1,33 @@
 .banner {
-	width: 100VW; }
+	width: 100VW;
+	/*height: 70rpx;*/
+	 }
 	.banner .index_banner {
-	  height: 380rpx; }
-	  .banner .index_banner .home_banner_img {
-	    width: 100VW;
-	    vertical-align: top; }
-	  .banner .swiper-box .wx-swiper-dots.wx-swiper-dots-horizontal {
-	    margin-bottom: 0rpx; }
-	  .banner .swiper-box .wx-swiper-dot {
-	    width: 12rpx;
-	    height: 12rpx;
-	    border: 4rpx solid #fff;
-	    display: inline-flex;
-	    margin-left: 4rpx;
-	    justify-content: space-between; }
-	    .banner .swiper-box .wx-swiper-dot::before {
-	      content: '';
-	      flex-grow: 1;
-	      background: rgba(255, 255, 255, 0);
-	      border-radius: 50%; }
-	  .banner .swiper-box .wx-swiper-dot-active::before {
-	    background: #fff; }
+	    /*height: 70rpx; */ }
+	    .banner .index_banner .home_banner_img {
+		    width: 100VW;
+		    vertical-align: top; }
+		  .banner .swiper-box .wx-swiper-dots.wx-swiper-dots-horizontal {
+		    margin-bottom: 0rpx; }
+		  .banner .swiper-box .wx-swiper-dot {
+		    width: 12rpx;
+		    height: 12rpx;
+		    border: 4rpx solid #fff;
+		    display: inline-flex;
+		    margin-left: 4rpx;
+		    justify-content: space-between; }
+		    .banner .swiper-box .wx-swiper-dot::before {
+		      content: '';
+		      flex-grow: 1;
+		      background: rgba(255, 255, 255, 0);
+		      border-radius: 50%; }
+		  .banner .swiper-box .wx-swiper-dot-active::before {
+		    background: #fff; }
+    .banner .text {
+    	width: 100%;
+    	height: 100%;
+    	display: flex;
+    	align-items: center;
+    	font-size: 32rpx;
+    	color: red;
+    	font-weight: bold; }
